# climate_tech_report_2025

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  _wikidata_ping.py  pyproject.toml  pyproyect.toml
.github/workflows/: ci.yml
backup_out/: events_normalized.csv.bak  events_normalized_20250930_103819.csv  industry_map.yml.bak
config/: anchors.yml  ban_terms.txt  industry_map.yml  jobs.yml  keywords.yml  memberships.yml  news.yml  project.yml  proyect.yml  signal_map.yml  stopwords_ext.txt  weights.yml
data/: samples
data/processed/: events_normalized.reclass.csv  events_normalized_backup.csv  events_normalized_news_known.csv  events_normalized_postqid.csv  events_normalized_precleanup.csv  industry_distribution.csv  interest_scores.csv  prospect_index.csv  prospects_digital_assets.csv  prospects_renewables.csv  prospects_solar_co.csv  reclass.log.csv  reclass_confusion.csv  ungc_participants_latam.csv
data/samples/: README.md  company_size_lookup.csv  signals_jobs_mock.csv  signals_memberships_mock.csv  signals_news_mock.csv  universe_mock.csv
docs/: DATA_DICTIONARY.md  METHODS.md  data_overview.md  data_samples_template.txt  index.html  prospect_lists_summary.md
docs/analysis/: industry_classification_guidelines.md  industry_term_frequencies.md
docs/market_radar/: graph_style_reference.md  index.html  (+2 more)
scripts/: build_prospect_lists.py  generate_market_radar.py  market_radar_theme.py  rebuild_events_from_memberships.py  run_when_wikidata_ready.ps1  run_when_wikidata_ready.sh  ungc_scraper.py
tests/: test_iic.py  test_industry_normalization.py
(+48 files in other folders)
